<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptionActivity"
    android:orientation="vertical"
    android:weightSum="13">

    <ImageView
        android:id="@+id/gallery_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/baiterek6"/>


    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description_title"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"/>

    <fragment
        android:id="@+id/description"
        android:name="com.example.strig.baiterekapp.fragments.DescriptionFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="6"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_red"
            android:fontFamily="@font/roboto"
            android:text="@string/show_on_map"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:layout_margin="8dp" />

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_green"
            android:fontFamily="@font/roboto"
            android:text="@string/start_quiz"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>