<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DescriptionFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description_text_label_location"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description_text_label_constructed"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description_text_label_info"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description_text_location"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description_text_constructed"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-smallcaps"
                android:autoSizeTextType="uniform"
                android:text="@string/description_text_info"
                android:textColor="@color/black"
             />
        </LinearLayout>
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:weightSum="4">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_label_location"-->
                <!--android:textColor="@color/black"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_location"-->
                <!--android:textColor="@color/black" />-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:weightSum="4">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_label_constructed"-->
                <!--android:textColor="@color/black"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_constructed"-->
                <!--android:textColor="@color/black" />-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:weightSum="4">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_label_info"-->
                <!--android:textColor="@color/black"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:fontFamily="sans-serif-smallcaps"-->
                <!--android:text="@string/description_text_info"-->
                <!--android:textColor="@color/black" />-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->


</ScrollView>